fixed CSS glitched on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -133,32 +133,6 @@ scrollbar-thumb {
     height: 8vh;
     height: 8svh;
   }
-
-  body {
-    line-height: 1.5;
-    font-size: 1.5rem;
-  }
-
-  h1 {
-    font-size: 1.9rem;
-  }
-
-  h2 {
-    font-size: 1.7rem;
-    font-family: "Source Sans 3", sans-serif;
-  }
-
-  h3 {
-    font-size: 1.6rem;
-    font-family: "Source Sans 3", sans-serif;
-  }
-
-  h4,
-  h5,
-  h6 {
-    font-size: 1.5rem;
-    font-family: "Source Sans 3", sans-serif;
-  }
 }
 
 /* Mobile with small height, ie with keyboard shown*/
