--- a/client/src/components/features/Expenses/RenderExpenseBeneficiaries/RenderExpenseBeneficiaries.module.css
+++ b/client/src/components/features/Expenses/RenderExpenseBeneficiaries/RenderExpenseBeneficiaries.module.css
@@ -4,9 +4,14 @@
   align-items: center;
 }
 .beneficiariesList {
-  font-size: 1.6rem;
-  font-weight: 400;
-  list-style: none;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
+  justify-content: center;
+  padding: 0rem 2rem;
+}
+
+.beneficiary {
+  white-space: nowrap;
+  font-size: 1.6rem;
 }
