--- a/client/src/components/features/GroupBalancesAndHistory/GroupHistory/RenderGroupHistory/RenderGroupHistory.module.css
+++ b/client/src/components/features/GroupBalancesAndHistory/GroupHistory/RenderGroupHistory/RenderGroupHistory.module.css
@@ -42,7 +42,8 @@ a:hover {
 
 @media (max-width: 500px) {
   .container {
-    padding-left: 0;
+    padding-left: 0rem;
+    padding-right: 0rem;
     width: 95%;
   }
   .container li {
